--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     color:white;
     background:#062482;
     margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
@@ -11,6 +12,47 @@ header {
     color: rgb(56, 144, 232);
 }
 
-section {
+.chamada {
     background: rgb(11, 24, 97);
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 3px solid rgb(56, 144, 232)
+}
+
+.categoria h2 {
+    color:rgb(56, 144, 232)
 }
